--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -37,12 +37,12 @@
    "source": [
     "# define discriminator from pipeline\n",
     "# return probability that text is human-generated\n",
-    "classifier = "
+    "classifier = pipeline('sentiment-analysis', model='roberta-base-openai-detector')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        " {'label': 'Fake', 'score': 0.9997968077659607}]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
