--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Generator'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# import components\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgenerators\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mGPT2\u001b[39;00m \u001b[39mimport\u001b[39;00m GPT2\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdiscriminators\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBERT\u001b[39;00m \u001b[39mimport\u001b[39;00m BERT\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mfitness_functions\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mTrivialFitnessFunction\u001b[39;00m \u001b[39mimport\u001b[39;00m TrivialFitnessFunction\n",
-      "File \u001b[0;32m~/Documents/classes/CS 224N/cheatGPT/generators/GPT2.py:9\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mGPT2-based generator\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39msubclass of general Generator class\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39muses GPT2-large from HuggingFace\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mhttps://huggingface.co/gpt2\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[39m# imports superclass definition\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mGenerator\u001b[39;00m \u001b[39mimport\u001b[39;00m Generator\n\u001b[1;32m     11\u001b[0m \u001b[39m# imports huggingface infrastructure\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[39m# from transformers import GPT2Tokenizer, GPT2 LMHeadModel\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtransformers\u001b[39;00m \u001b[39mimport\u001b[39;00m pipeline\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Generator'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jstav/miniconda3/envs/proj/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -45,6 +41,16 @@
     "from discriminators.BERT import BERT\n",
     "from fitness_functions.TrivialFitnessFunction import TrivialFitnessFunction\n",
     "from utility_function import u\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import discriminators\n",
+    "BERT = discriminators.BERT.BERT()"
    ]
   },
   {
@@ -108,41 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "UsageError: Line magic function `%reload` not found.\n"
+      "/Users/jstav/miniconda3/envs/proj/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
-    "%reload discriminators\n",
     "import discriminators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'discriminators' has no attribute 'BERT'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m discriminators\u001b[39m.\u001b[39;49mBERT\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'discriminators' has no attribute 'BERT'"
-     ]
-    }
-   ],
-   "source": [
-    "discriminators.BERT"
    ]
   }
  ],
