--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jstav/miniconda3/envs/proj/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import components\n",
     "from generators.GPT2 import GPT2\n",
@@ -45,28 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import discriminators\n",
-    "BERT = discriminators.BERT.BERT()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at roberta-base-openai-detector were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "Some weights of the model checkpoint at roberta-base-openai-detector were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
       "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "/Users/jstav/miniconda3/envs/proj/lib/python3.10/site-packages/transformers/pipelines/text_classification.py:89: UserWarning: `return_all_scores` is now deprecated,  if want a similar funcionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
-      "  warnings.warn(\n"
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
     }
    ],
@@ -75,6 +54,31 @@
     "generator = GPT2()\n",
     "discriminator = BERT()\n",
     "fitness_function = TrivialFitnessFunction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "PAFitnessFunction.evaluate_batch() missing 1 required positional argument: 'passages'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m passages \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      3\u001b[0m \u001b[39m# fitness_function.evaluate_batch(passages)\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m fitness_function\u001b[39m.\u001b[39;49mevaluate_batch(prompt, passages)\n",
+      "File \u001b[0;32m~/Documents/classes/CS 224N/cheatGPT/fitness_functions/PAFitnessFunction.py:27\u001b[0m, in \u001b[0;36mPAFitnessFunction.evaluate_batch\u001b[0;34m(self, prompt, passages)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mevaluate_batch\u001b[39m(\u001b[39mself\u001b[39m, prompt, passages):\n\u001b[0;32m---> 27\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mevaluate_batch(passages)\n",
+      "\u001b[0;31mTypeError\u001b[0m: PAFitnessFunction.evaluate_batch() missing 1 required positional argument: 'passages'"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"\"\n",
+    "passages = [\"a\", \"b\"]\n",
+    "# fitness_function.evaluate_batch(passages)\n",
+    "fitness_function.evaluate_batch(prompt, passages)"
    ]
   },
   {
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,8 +131,40 @@
     }
    ],
    "source": [
-    "import discriminators"
+    "import test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'fitness_functions' has no attribute 'TrivialFitnessFunction'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# test.test_generators()\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# test.test_discriminators()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m test\u001b[39m.\u001b[39;49mtest_fitness_functions()\n\u001b[1;32m      4\u001b[0m \u001b[39m# test.test_utility_function()\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/classes/CS 224N/cheatGPT/test.py:68\u001b[0m, in \u001b[0;36mtest_fitness_functions\u001b[0;34m()\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_fitness_functions\u001b[39m():\n\u001b[1;32m     66\u001b[0m     \n\u001b[1;32m     67\u001b[0m     \u001b[39m# initializes fitness function\u001b[39;00m\n\u001b[0;32m---> 68\u001b[0m     fitness_function \u001b[39m=\u001b[39m fitness_functions\u001b[39m.\u001b[39;49mTrivialFitnessFunction\u001b[39m.\u001b[39mTrivialFitnessFunction()\n\u001b[1;32m     70\u001b[0m     \u001b[39m# tests fitness function on reference passages\u001b[39;00m\n\u001b[1;32m     71\u001b[0m     \u001b[39mfor\u001b[39;00m filename, passage \u001b[39min\u001b[39;00m passages\u001b[39m.\u001b[39mitems():\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'fitness_functions' has no attribute 'TrivialFitnessFunction'"
+     ]
+    }
+   ],
+   "source": [
+    "# test.test_generators()\n",
+    "# test.test_discriminators()\n",
+    "test.test_fitness_functions()\n",
+    "# test.test_utility_function()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
