modified data pipeline

--- a/discriminators/uniform-pt/testfuncs.ipynb
+++ b/discriminators/uniform-pt/testfuncs.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/detect/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/raghavgarg/miniconda3/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -33,6 +33,13 @@
     "from multiprocessing.pool import ThreadPool\n",
     "import time"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -355,6 +362,54 @@
    "source": [
     "print(len(data))\n",
     "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset xsum (/Users/raghavgarg/Desktop/cheatGPT/discriminators/uniform-pt/cache/xsum/default/1.2.0/082863bf4754ee058a5b6f6525d0cb2b18eadb62c7b370b095d1364050a52b71)\n",
+      "Downloading (…)lve/main/config.json: 100%|██████████| 1.21k/1.21k [00:00<00:00, 318kB/s]\n",
+      "Downloading (…)ve/main/spiece.model: 100%|██████████| 792k/792k [00:00<00:00, 2.15MB/s]\n",
+      "Downloading (…)/main/tokenizer.json: 100%|██████████| 1.39M/1.39M [00:00<00:00, 3.65MB/s]\n",
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (853 > 512). Running this sequence through the model will result in indexing errors\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of samples: 1829\n",
+      "Average number of words: 306.9710224166211\n"
+     ]
+    }
+   ],
+   "source": [
+    "# strip newlines from each example; replace one or more newlines with a single space\n",
+    "def strip_newlines(text):\n",
+    "    return ' '.join(text.split())\n",
+    "data = datasets.load_dataset(\"xsum\", split='train', cache_dir='cache')[\"document\"]\n",
+    "data = list(dict.fromkeys(data))  # deterministic, as opposed to set()\n",
+    "data = [x.strip() for x in data]\n",
+    "data = [strip_newlines(x) for x in data]\n",
+    "long_data = [x for x in data if len(x.split()) > 250]\n",
+    "if len(long_data) > 0:\n",
+    "    data = long_data\n",
+    "random.seed(0)\n",
+    "random.shuffle(data)\n",
+    "data = data[:5_000]\n",
+    "preproc_tokenizer = transformers.AutoTokenizer.from_pretrained('t5-small', model_max_length=512, cache_dir='cache')\n",
+    "tokenized_data = preproc_tokenizer(data)\n",
+    "data = [x for x, y in zip(data, tokenized_data[\"input_ids\"]) if len(y) <= 512]\n",
+    "\n",
+    "# print stats about remainining data\n",
+    "print(f\"Total number of samples: {len(data)}\")\n",
+    "print(f\"Average number of words: {np.mean([len(x.split()) for x in data])}\")\n"
    ]
   },
   {
