trlx mvp working!

--- a/scratch_test.ipynb
+++ b/scratch_test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,16 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/detect/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Some weights of the model checkpoint at roberta-base-openai-detector were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "/opt/conda/envs/detect/lib/python3.10/site-packages/transformers/pipelines/text_classification.py:104: UserWarning: `return_all_scores` is now deprecated,  if want a similar funcionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -60,20 +65,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\t PASSAGE: \n",
+      "\t PASSAGE:  Are you a man, say, or a woman, or any character who can conceive anything?\" He replied with some astonishment, \"No. I am neither a man, nor do I live in any of those particulars.\"\n",
       "\n",
-      "Gross. That's a better concept than multiplication – it is a better thing to do. But we don't need to think at the same time. How do you want to get the weight of one whole? We can do it, because the weights of all things are multiplied, which in any case doesn't make sense. In this case, we didn't know that all six numbers could be converted to their correct number. The same is true. We can also do this, if we do it right, if we add one hundred to a square without affecting the original.\n",
+      "\"You are quite right,\" replied Mr. Wigginton. \"It ought to have happened to me on that day. I was at the same time an infant of three or four years of age; you see why I thought the matter too great for that matter; so I went, not to make a fuss, but to observe how many children we might have, and to show that we had all but four. There was one father with two daughters, who stood at a certain height between us, and with whom I thought it necessary to leave each of our little family to one side; but we knew all that they knew, and no one was anxious either to take or not to take care of us: we had been told that there were three, and that our little family might have done with them just as well, for we should have loved them equally.\n",
       "\n",
-      "The third point about the use of calculus is that you can do it in a much more interesting way. Suppose you give someone a million $s, which is $m. That's not a big deal – the big deal is that you can do it. But then you've just created the sum of all possible numbers. You can say: If everybody had $m, then they were all the same (if we didn't know, we could know). This might be a fun idea at the beginning, but with calculus, we will see in what way is more fun and not less fun, and if you think about it for a moment, this is a more interesting idea and you have it. It gives you something fun and not more fun (or something less, because it's more fun in my opinion), so it takes on the meaning that you get from that idea.\n",
+      "\"My mother said to me, a great many things are in our nature, and they deserve that very consideration to follow their own example, that all life is very fair and happy, and that we ought to go far to the best. I have had great pleasure at this; it seems to me that the same considerations were applied to the others. It was my first time reading about the circumstances of this infant's life. I had gone out to visit some friends of mine, and had talked about it with them, and got so good a feeling of being in their company that I went down to their house and looked in upon the story that they had told to me. I was in our little chamber, and did not care to let anyone come over to me, but was anxious of seeing what my little family was doing. I heard from some acquaintances that their father had gone, and there had then arisen a whole thing of their own—of their father's doing things to the children in their house, how they did it, and what sort of things they were going to make, and of his own. I was quite delighted in the whole affair, and the general idea had been something which I cannot bear.\n",
       "\n",
-      "So how do you do that? In fact what I call the process of the calculus is essentially the process of adding, multiplying and divisorising up to an extremely small sum of these $s from a range. You know how to do it this way, what we may call it as an equation. This is the fact that $m + g is the factorial of the process of multiplying and summing up. Since we call $a a function, $g a function, then $n a function, and then $n a function, then $x f a function gives us $f$ and this is a function called fx, which is called the F$ of $a $ a function; f$ is how they call it, as there are many other things.\n",
-      "\n",
-      "We are able to use the F$ of this equation to represent $m$. Let's say, for $b, $l, $m\n"
+      "\"Mr. O'Connor, whose name would have made the present family so joyous, said\n"
      ]
     }
    ],
    "source": [
-    "test.test_generators()"
+    "tg = test.test_generators()"
    ]
   },
   {
@@ -98,7 +101,7 @@
     }
    ],
    "source": [
-    "test.test_discriminators()"
+    "td = test.test_discriminators()"
    ]
   },
   {
